--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "^1.18.2",
     "@react-navigation/native": "^6.0.2",
+    "@types/react-native-snap-carousel": "^3.8.9",
+    "axios": "^1.6.2",
+    "deprecated-react-native-prop-types": "^5.0.0",
     "expo": "~49.0.18",
     "expo-font": "~11.4.0",
     "expo-linking": "~5.0.2",
@@ -29,6 +33,8 @@
     "react-native-gesture-handler": "~2.12.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-snap-carousel": "^4.0.0-beta.6",
+    "react-native-toast-message": "^2.1.7",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
