--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native": "^6.0.2",
     "@types/react-native-snap-carousel": "^3.8.9",
     "axios": "^1.6.2",
+    "dayjs": "^1.11.10",
     "deprecated-react-native-prop-types": "^5.0.0",
     "expo": "~49.0.18",
     "expo-font": "~11.4.0",
@@ -27,9 +28,12 @@
     "expo-status-bar": "~1.6.0",
     "expo-system-ui": "~2.4.0",
     "expo-web-browser": "~12.3.2",
+    "moment": "^2.29.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-big-calendar": "^4.7.2",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
@@ -42,6 +46,7 @@
     "@types/react": "~18.2.14",
     "jest": "^29.2.1",
     "jest-expo": "~49.0.0",
+    "react-native-dotenv": "^3.4.9",
     "react-test-renderer": "18.2.0",
     "typescript": "^5.1.3"
   },
