--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
     "dayjs": "^1.11.10",
     "deprecated-react-native-prop-types": "^5.0.0",
     "expo": "~49.0.18",
+    "expo-build-properties": "^0.8.3",
+    "expo-dev-client": "~2.4.12",
     "expo-font": "~11.4.0",
     "expo-linking": "~5.0.2",
     "expo-router": "^2.0.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "expo-system-ui": "~2.4.0",
+    "expo-updates": "~0.18.17",
     "expo-web-browser": "~12.3.2",
     "moment": "^2.29.4",
     "react": "18.2.0",
