--- a/eas.json
+++ b/eas.json
@@ -12,6 +12,13 @@
         "EXPO_PUBLIC_API_URL": "http://103.180.137.113/",
         "EXPO_PUBLIC_ACCOUNT": "account"
       }
+    },
+    "preview_ios": {
+      "channel": "preview_ios",
+      "env": {
+        "EXPO_PUBLIC_API_URL": "http://103.180.137.113/",
+        "EXPO_PUBLIC_ACCOUNT": "account"
+      }
     }
   },
   "submit": {
