--- a/package.json
+++ b/package.json
@@ -42,7 +42,11 @@
     "react-native-screens": "~3.22.0",
     "react-native-snap-carousel": "^4.0.0-beta.6",
     "react-native-toast-message": "^2.1.7",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "eas-cli": "^3.5.2",
+    "expo-notifications": "~0.20.1",
+    "expo-device": "~5.4.0",
+    "expo-constants": "~14.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
