--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-EXPO_PUBLIC_API_URL=https://rebelsaintrecords.com/
+EXPO_PUBLIC_API_URL=http://api.rebelsaintrecords.com/
 EXPO_PUBLIC_ACCOUNT=account
