--- a/package.json
+++ b/package.json
@@ -20,11 +20,15 @@
     "axios": "^1.6.2",
     "dayjs": "^1.11.10",
     "deprecated-react-native-prop-types": "^5.0.0",
+    "eas-cli": "^3.5.2",
     "expo": "~49.0.18",
     "expo-build-properties": "^0.8.3",
+    "expo-constants": "~14.4.2",
     "expo-dev-client": "~2.4.12",
+    "expo-device": "~5.4.0",
     "expo-font": "~11.4.0",
     "expo-linking": "~5.0.2",
+    "expo-notifications": "~0.20.1",
     "expo-router": "^2.0.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
@@ -38,15 +42,12 @@
     "react-native-big-calendar": "^4.7.2",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-snap-carousel": "^4.0.0-beta.6",
     "react-native-toast-message": "^2.1.7",
-    "react-native-web": "~0.19.6",
-    "eas-cli": "^3.5.2",
-    "expo-notifications": "~0.20.1",
-    "expo-device": "~5.4.0",
-    "expo-constants": "~14.4.2"
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
