--- a/eas.json
+++ b/eas.json
@@ -18,7 +18,8 @@
       "env": {
         "EXPO_PUBLIC_API_URL": "https://api.rebelsaintrecords.com/",
         "EXPO_PUBLIC_ACCOUNT": "account"
-      }
+      },
+      "buildConfiguration": "Release"
     }
   },
   "submit": {
